Adds prototype board

--- a/ECS.bib
+++ b/ECS.bib
@@ -145,3 +145,9 @@ Kappa statistic
 	pages={360--363},
 	year={2005}
 }
+
+Fritzing homepage
+@MISC{fritzing,
+	url = {http://fritzing.org/home/},
+	title = {fritzing homepage}
+}
