Add some references for user study

--- a/ECS.bib
+++ b/ECS.bib
@@ -151,3 +151,24 @@ Fritzing homepage
 	url = {http://fritzing.org/home/},
 	title = {fritzing homepage}
 }
+
+@MISC{sotonsoh,
+  author = {{University of Southampton}},
+  title = {Safety and Occupational Health},
+  year = {2016},
+  url = {http://www.southampton.ac.uk/healthandsafety/index.page}
+}
+
+@MISC{ergo,
+  author = {{University of Southampton}},
+  title = {ERGO : Ethics and Research Governance Online},
+  year = {2016},
+  url = {https://www.ergo.soton.ac.uk/}
+}
+
+@MISC{vieyra2016,
+  author = {{Vieyra Software}},
+  title = {Physics Toolbox Sensor Suite},
+  year = {2016},
+  url = {https://play.google.com/store/apps/details?id=com.chrystianvieyra.physicstoolboxsuite&hl=en_GB}
+}
