--- a/study/study.tex
+++ b/study/study.tex
@@ -8,10 +8,10 @@ The data which is involved are the readings from sensors which are attached to t
 \namedsection{Study Preparation}{Finch}
 Before performing studies involving participants who are not actually members of the project it is required to gain ethical approval. This is a requirement put in place from the University of Southampton and also covers the legal requirement of data protection when dealing with participant’s personal data. Faculty ethics committees review applications for ethical approval and once they are approved insurance and legal cover is provided. Therefore, it is highly important to follow the approval process as it helps to make sure there is enough detail and planning in the study to help keep participants safe.
 
-To get advice with the application process, contact was made with the University of Southampton Safety and Occupational Health department <ref>. In a meeting between the groups user study lead and members of SOH it was decided that the study should take place in a private room where there would not be any interruptions and assistance was provided with booking a lab room in the Phycology department for this purpose. Further assistance was also given for finding the contact details of first aiders.
+To get advice with the application process, contact was made with the University of Southampton Safety and Occupational Health department \cite{sotonsoh}. In a meeting between the groups user study lead and members of SOH it was decided that the study should take place in a private room where there would not be any interruptions and assistance was provided with booking a lab room in the Phycology department for this purpose. Further assistance was also given for finding the contact details of first aiders.
 
 \namedsection{Ethical Approval Process}{Finch}
-Throughout the application process, heavy reference was made to the instructions and guideline documents provided by the Ethics and Research Governance Online website <ref>. One of the key things that are used to classify studies are study characteristics which are a list of areas where potential risks could be introduced ranging from low to high likelihood. As our study involved wearable technology, this counted as being intrusive which in turn meant there was a risk of harm and these are two medium risk study characteristics.
+Throughout the application process, heavy reference was made to the instructions and guideline documents provided by the Ethics and Research Governance Online website \cite{ergo}. One of the key things that are used to classify studies are study characteristics which are a list of areas where potential risks could be introduced ranging from low to high likelihood. As our study involved wearable technology, this counted as being intrusive which in turn meant there was a risk of harm and these are two medium risk study characteristics.
 
 This meant that the user study had to provide consent forms so that participants could provide their consent for taking part in writing. However, this also meant that personal data was collected in the study which caused another study characteristic to be matched.
 
@@ -22,7 +22,7 @@ In this project, there were two areas where user studies could have been require
 \namedsection{During the Study}{Finch}
 In the end, only the first area of the user study was performed for collecting movement data to train the algorithm. Specifically, accelerometer and gyroscope sensor data was required to be collected so that the effectiveness of the two at training the algorithm and accurately classifying exercises could be compared.
 
-At this stage in the project, the prototype device was not yet ready to be used to record the movement data so a mobile phone with inbuilt accelerometer and gyroscope sensor was used instead. The Physics Toolbox Suite Version 1.4.4 app <ref> was used to record data directly from the phones sensors by allowing us to choose which sensors to use.
+At this stage in the project, the prototype device was not yet ready to be used to record the movement data so a mobile phone with inbuilt accelerometer and gyroscope sensor was used instead. The Physics Toolbox Suite Version 1.4.4 app \cite{vieyra2016} was used to record data directly from the phones sensors by allowing us to choose which sensors to use.
 
 For each participant, the phone was strapped to various parts of their body using Velcro. These positions included the top of the right foot, and the outer side of their upper right arm. It was also made sure that these positions and the orientation of the phone were the same for each participant in order to make sure the data was consistent. This was vital as the data from each participant was combined to form the overall training data.
 
